<resources>
    <string name="app_name">Hosha</string>
    <string name="hosha">HOSHA</string>
    <string-array name="item_day">
        <item>Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>
    <string-array name="item_month">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_number_or_e_mail">Phone number or email address</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="send_new_password">Send new Password</string>
    <string name="send_email">Send email</string>
    <string name="e_mail">Email</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="facebook_app_id">121683319870834</string>
    <string name="fb_login_protocol_scheme">fb121683319870834</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="strong_password">Strong Password</string>
    <string name="please_enter_your">Please enter your</string>
    <string name="birthday">Birthday</string>
    <string name="date">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_have_an_account_register">Already have an account?</string>
    <string name="sign_in_underline"><u>Sign in</u></string>
    <string name="error_email">Invalid email</string>
    <string name="error_password">Password must be contain at least 8 characters</string>
    <string name="image_error">Image not found</string>
    <string name="cancel">Cancel</string>
    <string name="login_error">wrong credential</string>
    <string name="err_Date">Choose your birthday</string>
    <string name="error_matching">Password does not match</string>
    <string name="error_username">Username must not contain spaces and at least 8 characters </string>
    <string name="error_phone">Invalid phone number</string>
    <string name="error_checked">Select gender</string>
    <string name="error_fullname">Full name must be contain at least 8 characters</string>
    <string name="add_title">Add Hosha Title</string>
    <string name="name_hint">Name</string>
    <string name="text_only_hint">Add text</string>
    <string name="private_hosha">Private Hosha</string>
    <string name="post">Post</string>
    <string name="title_required">Hosha title is required</string>
    <string name="text_required">text is required</string>
    <string name="follow">Follow</string>
    <string name="unFollow">Following</string>
    <string name="add_comment">Add Comment</string>
    <string name="no_internet">No Internet connection</string>
    <string name="please_wait">please wait</string>
    <string name="exit">Please press back again to exit</string>
    <string name="video_image">You have to upload the same file type(2 images or 2 videos)</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="followers">Followers</string>
    <string name="select_all">Select ALL</string>
    <string name="search_for_followers">Search for followers</string>
    <string name="search_for_following">Search for following</string>
    <string name="todo">TODO</string>
    <string name="choose">Choose</string>
    <string name="all_error">You have to upload files images or write text</string>
    <string name="image_video">You have to upload the same file type 2 images</string>
    <string name="default_notification_channel_id">notification_channel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_with_phone_or_email">Sign up with Email</string>
    <string name="retype_password">Retype Password</string>
    <string name="agree_terms">I agree to the Terms and Conditions and Privacy policy.</string>
    <string name="old_password">Old Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_changed">Password Changed!</string>
    <string name="your_password_has_been_changed">your password has been changed</string>
    <string name="successfully">Successfully.</string>
    <string name="swipe_hosha_to_go_home">Swipe Hosha to go Home</string>
    <string name="invite">Invite</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="no_clashes_yet">No clashes yet</string>
    <string name="no_notifications_still_now">No notifications still now</string>
    <string name="search_here">Search here</string>
    <string name="notifications">Notifications</string>
    <string name="see_more">See More</string>
    <string name="accept">Accept</string>
    <string name="invite_your_backbones">Invite Your backbones</string>
    <string name="you_can_create_hosha_with">-You can create hoshas with text only or image only or both</string>
    <string name="sexual_content_not_allowed">- sexual content not allowed</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="submit_invitation">Submit Invitation</string>
    <string name="phone">Phone</string>
    <string name="create_hosha">Create Hosha</string>
    <string name="undo_vote">Undo Vote</string>
    <string name="report_aarka">Report Aarka</string>
    <string name="challenge">Challenge</string>
    <string name="create_3arka_from_this_post">Create 3arka From This Post</string>
    <string name="view_related_3arkas">View related 3arkas</string>
    <string name="delete_hosha">Delete Hosha</string>
    <string name="end_hosha">End Hosha</string>
    <string name="my_hoshas">My Hoshas</string>
    <string name="participated_hoshas">Participated Hoshas</string>
    <string name="no_search_result">No Search Result</string>
    <string name="no_comments_yet">No Comments Yet</string>
    <string name="replay">Reply</string>
    <string name="view">View</string>
    <string name="replies">replies</string>
    <string name="welcome_to_hosha">Welcome To Hosha</string>
    <string name="your_account_hase_been_logedin">Your account hase been logedin</string>
    <string name="profile">profile</string>
    <string name="create">create</string>
    <string name="home">home</string>
    <string name="accept_request">Accept request</string>
    <string name="hoshas">Hoshas</string>
    <string name="search_for_clashes">Search For Clashes</string>
    <string name="hoshars">hoshers</string>
    <string name="public_post">Public Post</string>
    <string name="edit_hosha">Edit Hosha</string>
    <string name="hosha_ended">Hosha ended</string>
    <string name="add_replay">Add Replay</string>
    <string name="no_replies_still_now">No replies still now</string>
    <string name="send_request">Send Request</string>
    <string name="follow_this_account_to_see_their_hoshas">Follow this account to see their hoshas</string>
    <string name="this_account_is_private">This account is Private</string>
    <string name="fillAllRequiredFields">Fill all required fields</string>
    <string name="or">Or</string>
    <string name="EmptyFollowerText">you have no followers</string>
    <string name="EmptyFollowingText">you haven’t followed anyone yet</string>
    <string name="_0">0</string>
</resources>