<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.auth.fragment.SplashAuthFragment">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:paddingBottom="@dimen/hzPaddingToScreen"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                style="@style/RegisterButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_container_height"
                android:layout_marginHorizontal="@dimen/hzMarginToScreen"
                android:layout_marginTop="@dimen/small_padding_to_views"
                android:backgroundTint="@color/teal_200"
                android:text="@string/sign_up"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/RegisterButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_container_height"
                android:layout_marginHorizontal="@dimen/hzMarginToScreen"
                android:layout_marginTop="@dimen/small_padding_to_views"
                android:backgroundTint="@color/bottom_nav_icon_tint"
                android:shadowColor="@android:color/transparent"
                android:text="@string/login"
                android:textAlignment="center" />

        </LinearLayout>


    </RelativeLayout>
</layout>