<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/_20sdp"
        tools:context=".ui.auth.fragment.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/h0_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPhoneOrEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_container_height"
                android:layout_marginBottom="@dimen/hzMarginToScreen"
                android:background="@drawable/et_auth_bg"
                android:hint="@string/phone_number_or_e_mail"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/text_hint_color"
                tools:ignore="TextFields" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_container_height"
                android:layout_marginBottom="@dimen/hzMarginToScreen"
                android:background="@drawable/et_auth_bg"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint_color"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_container_height"
                    android:hint="@string/password"
                    android:importantForAutofill="yes"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/vertical_padding_to_views"
                    android:paddingVertical="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--<TextView
                android:id="@+id/tvForgetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding_to_views"
                android:layout_marginBottom="@dimen/vertical_padding_to_views"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="@dimen/small_padding_to_views"
                android:text="@string/forgot_your_password"
                android:textAlignment="center"
                android:textSize="@dimen/p1_text_size" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                style="@style/RegisterButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_container_height"
                android:layout_marginTop="@dimen/small_padding_to_views"
                android:backgroundTint="@color/teal_200"
                android:text="@string/sign_in"
                android:textAlignment="center"
                app:iconPadding="@dimen/vertical_padding_to_views" />

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dip"
                    android:layout_weight="1"
                    android:background="@color/divider_background_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/hzMarginToScreen"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/or"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h3_text_size" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dip"
                    android:layout_weight="1"
                    android:background="@color/divider_background_color" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFacebookLogin"
                style="@style/RegisterButtonStyle"
                app:icon="@drawable/ic_facebook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_container_height"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="#063C82"
                android:text="@string/login_with_facebook" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogleLogin"
                style="@style/RegisterButtonStyle"
                app:icon="@drawable/ic_google"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_container_height"
                android:backgroundTint="#FF3E30"
                android:text="@string/login_with_google" />-->

        </LinearLayout>

    </RelativeLayout>
</layout>